# isa-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
isa/: __init__.py  isa.py
tests/: test_integration.py  test_metrics.py  test_property.py  test_unit.py
